Fix options vertical alignment

--- a/src/components/text-input/index.css
+++ b/src/components/text-input/index.css
@@ -33,6 +33,7 @@ text-input {
 	.input-pair {
 		display: flex;
 		justify-content: center;
+		align-items: center;
 
 		& [type="checkbox"] {
 			display: block;
